# src/routes/auth.ts
@@ -1,10 +1,17 @@
 import express from 'express';
 import authenticate from '../middlewares/authenticate';
-import { checkUser, loginUser, registerUser } from '../controllers/auth';
+import {
+  checkUser,
+  loginUser,
+  registerUser,
+  updateAccount,
+  updatePassword,
+} from '../controllers/auth';
 
 const auth = express.Router();
 
-auth.get('/', authenticate, checkUser);
+auth.route('/').get(authenticate, checkUser).patch(authenticate, updateAccount);
+auth.patch('/password', authenticate, updatePassword);
 auth.post('/register', registerUser);
 auth.post('/login', loginUser);
 
